manifests/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-green
  labels:
    app: demo-app
    role: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
      role: green
  template:
    metadata:
      labels:
        app: demo-app
        role: green
        version: green
    spec:
      containers:
        - name: demo-app
          image: omkar8284/realapp:latest   # placeholder, Jenkins will update tag
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 8
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
